--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -27,7 +27,7 @@
         android:id="@+id/placeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:colorText="@{viewModel.weather.night}"
+        colorText="@{viewModel.weather.isNight()}"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -57,7 +57,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical|end"
             android:text="@{viewModel.weather.temp}"
-            app:colorText="@{viewModel.weather.night}"
+            colorText="@{viewModel.weather.isNight}"
             android:textSize="@dimen/text_size_title"
             android:textAlignment="textEnd"
             android:textStyle="bold" />
@@ -86,7 +86,7 @@
         android:layout_marginTop="42dp"
         android:textSize="@dimen/text_size_title"
         android:layout_marginEnd="16dp"
-        app:colorText="@{viewModel.weather.night}"
+        colorText="@{viewModel.weather.isNight}"
         android:text="@{viewModel.weather.description}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -101,7 +101,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:textSize="@dimen/text_size_title"
-        app:colorText="@{viewModel.weather.night}"
+        colorText="@{viewModel.weather.isNight}"
         android:text="@{viewModel.weather.tempFeels}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
