--- a/app/src/main/res/layout/daily_schedule_fragment.xml
+++ b/app/src/main/res/layout/daily_schedule_fragment.xml
@@ -15,13 +15,14 @@
 
 
         <TextView
-            android:id="@+id/currentDateTextView"
+            android:id="@+id/dateTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@{viewModel.date}"
+            android:textAlignment="center"
             android:textSize="@dimen/text_size_subtitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +47,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/currentDateTextView" />
+            app:layout_constraintTop_toBottomOf="@id/dateTextView" />
 
 
 
