--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ivanasharov.smartplanner.presentation.model.TaskViewModel" />
+            type="com.ivanasharov.smartplanner.data.IdNameStatus" />
         <variable
             name="mainViewModel"
             type="com.ivanasharov.smartplanner.presentation.viewModel.CurrentDayViewModel" />
@@ -25,7 +25,6 @@
         android:gravity="center_vertical"
         android:paddingStart="@dimen/text_size_main_text"
         android:text="@{viewModel.name}"
-        android:textAlignment="textStart"
         android:textSize="20sp"
         android:textStyle="bold" />
 
