--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/currentDayFragment"
-        android:icon="@drawable/ic_today"
+        android:icon="@drawable/ic_list_24"
         android:title="@string/tab_1_current_day" />
 
     <item android:id="@+id/dailyScheduleFragment"
         android:icon="@drawable/ic_daily_schedule"
-        android:title="@string/tab_2_daily_schedule" />
+        android:title="@string/ic_daily_schedule" />
 
     <item android:id="@+id/planningFragment"
         android:icon="@drawable/ic_planning"
         android:title="@string/tab_3_planning" />
 
     <item android:id="@+id/weatherFragment"
-        android:icon="@drawable/ic_info"
+        android:icon="@drawable/ic_weather_24"
         android:title="@string/tab_4_weather" />
 
 </menu>
